--- a/snake_game.css
+++ b/snake_game.css
@@ -25,7 +25,7 @@ body {
 
 .snakeBodyPixel {
     background-color: #5e075e;
-    box-shadow: 0 0 5px black;
+    box-shadow: 0 0 0 black;
 }
 
 .food {
